Fix spacing

--- a/src/Styles/Preview/Preview.css
+++ b/src/Styles/Preview/Preview.css
@@ -24,7 +24,7 @@
 
 .preview-interface {
     display: flex;
-    margin-top: 5px;
+    margin-top: 10px;
     align-items: center;
 }
 
